library/fdk-aac-rs/fdk-aac-sys/src/bindings.rs

extern "C" {
    #[doc = " \\brief Fill AAC decoder's internal input buffer with bitstream data from the"]
    #[doc = " external input buffer. The function only copies such data as long as the"]
    #[doc = " decoder-internal input buffer is not full. So it grabs whatever it can from"]
    #[doc = " pBuffer and returns information (bytesValid) so that at a subsequent call of"]
    #[doc = " %aacDecoder_Fill(), the right position in pBuffer can be determined to grab"]
    #[doc = " the next data."]
    #[doc = ""]
    #[doc = " \\param self        AAC decoder handle."]
    #[doc = " \\param pBuffer     Pointer to external input buffer."]
    #[doc = " \\param bufferSize  Size of external input buffer. This argument is required"]
    #[doc = " because decoder-internally we need the information to calculate the offset to"]
    #[doc = " pBuffer, where the next available data is, which is then"]
    #[doc = " fed into the decoder-internal buffer (as much as"]
    #[doc = " possible). Our example framework implementation fills the"]
    #[doc = " buffer at pBuffer again, once it contains no available valid bytes anymore"]
    #[doc = " (meaning bytesValid equal 0)."]
    #[doc = " \\param bytesValid  Number of bitstream bytes in the external bitstream buffer"]
    #[doc = " that have not yet been copied into the decoder's internal bitstream buffer by"]
    #[doc = " calling this function. The value is updated according to"]
    #[doc = " the amount of newly copied bytes."]
    #[doc = " \\return            Error code."]
    pub fn aacDecoder_Fill(
        self_: HANDLE_AACDECODER,
        pBuffer: *mut *mut UCHAR,
        bufferSize: *const UINT,
        bytesValid: *mut UINT,
    ) -> AAC_DECODER_ERROR;
}
extern "C" {
    #[doc = " \\brief               Decode one audio frame"]
    #[doc = ""]
    #[doc = " \\param self          AAC decoder handle."]
    #[doc = " \\param pTimeData     Pointer to external output buffer where the decoded PCM"]
    #[doc = " samples will be stored into."]
    #[doc = " \\param timeDataSize  Size of external output buffer."]
    #[doc = " \\param flags         Bit field with flags for the decoder: \\n"]
    #[doc = "                      (flags & AACDEC_CONCEAL) == 1: Do concealment. \\n"]
    #[doc = "                      (flags & AACDEC_FLUSH) == 2: Discard input data. Flush"]
    #[doc = " filter banks (output delayed audio). \\n (flags & AACDEC_INTR) == 4: Input"]
    #[doc = " data is discontinuous. Resynchronize any internals as"]
    #[doc = " necessary. \\n (flags & AACDEC_CLRHIST) == 8: Clear all signal delay lines and"]
    #[doc = " history buffers."]
    #[doc = " \\return              Error code."]
    pub fn aacDecoder_DecodeFrame(
        self_: HANDLE_AACDECODER,
        pTimeData: *mut INT_PCM,
        timeDataSize: INT,
        flags: UINT,
    ) -> AAC_DECODER_ERROR;
}
extern "C" {
    #[doc = " \\brief       De-allocate all resources of an AAC decoder instance."]
    #[doc = ""]
    #[doc = " \\param self  AAC decoder handle."]
    #[doc = " \\return      void."]
    pub fn aacDecoder_Close(self_: HANDLE_AACDECODER);
}
extern "C" {
    #[doc = " \\brief       Get CStreamInfo handle from decoder."]
    #[doc = ""]
    #[doc = " \\param self  AAC decoder handle."]
    #[doc = " \\return      Reference to requested CStreamInfo."]
    pub fn aacDecoder_GetStreamInfo(self_: HANDLE_AACDECODER) -> *mut CStreamInfo;
}
extern "C" {
    #[doc = " \\brief       Get decoder library info."]
    #[doc = ""]
    #[doc = " \\param info  Pointer to an allocated LIB_INFO structure."]
    #[doc = " \\return      0 on success."]
    pub fn aacDecoder_GetLibInfo(info: *mut LIB_INFO) -> INT;
}
